[tool.poetry]
name = "sonicsstarboard"
version = "0.1.0"
description = ""
authors = ["Sonic4999 <sonictbm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1"
aiomysql = "^0.0.20"
discord = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
