[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Sonic4999 <sonictbm@gmail.com>"]
description = ""
name = "sonicsstarboard"
version = "0.1.0"
[tool.poetry.dependencies]
aiomysql = "^0.0.20"
discord = "^1.0"
flask = "^1.1"
python = "^3.7"
[tool.poetry.dev-dependencies]
